--- a/WebContent/automations.html
+++ b/WebContent/automations.html
@@ -73,8 +73,7 @@
               <h3 class="panel-title">Local Temperature</h3>
          </div>
          <div class="panel-body">
-             <table align="center" width="3
-             0%">
+             <table align="center" width="30%">
              <tr>
              	<td><img alt="Termometro" src="images/thermometer.jpg" width="100%" height="30%"></td>
              	<td><h3>35º</h3></td>
