--- a/WebContent/menu.html
+++ b/WebContent/menu.html
@@ -11,16 +11,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Veio Automations</a>
+          <a class="navbar-brand" href="home.html">Veio Automations</a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            
-          </ul>
-        </div><!--/.nav-collapse -->
       </div>
     </nav>
 </div>
